<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin_default"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageview_book_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageview_book_cover"
        android:adjustViewBounds="true"
        android:maxWidth="@dimen/book_cover_max_width"
        android:src="@drawable/book_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_default"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_book_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textview_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/textview_book_author"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/textview_book_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_book_publisher"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/textview_previous_week_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textview_book_last_week_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_previous_week"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/textview_weeks_on_list_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textview_book_weeks_on_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_weeks_on_list"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>