<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin_default"
    android:orientation="vertical"
    tools:context=".BookDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_book_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageview_book_cover"
            android:maxWidth="@dimen/book_cover_max_width"
            android:src="@drawable/book_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin_default"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_book_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textview_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/textview_book_author"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/purple_700" />

            <TextView
                android:id="@+id/textview_book_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_book_publisher"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/textview_book_price_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textview_book_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_book_price"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_default"
        android:text="@string/textview_book_synopsis_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textview_book_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_default"
        android:text="@string/textview_book_synopsis"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>